staff and staff transaction logics added
